--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sri Vijaya Durga Coconut Traders</title>
+  <title>Sri Venkateswara Coconuts</title>
   <style>
     * {
       box-sizing: border-box;
@@ -244,8 +244,8 @@
     <!-- MAIN APP -->
     <div id="mainApp" class="screen">
       <div class="header">
-        <h1>SRI VIJAYA DURGA COCONUT TRADERS</h1>
-        <p>Ph: 9848195955 | Matsyapuri</p>
+        <h1>SRI VENKATESWARA COCONUTS</h1>
+        <p>Ph: 9989482646 | Vedangipalem</p>
       </div>
 
       <!-- Billing Form -->
@@ -315,8 +315,8 @@
   <script>
     // ===== PREDEFINED USERS (Edit these as needed) =====
     const validUsers = {
-      "farmer1": "pass123",
-      "partner1": "coconut456",
+      "srinu": "264626",
+      "mahi": "896989",
       "admin": "durga789"
     };
 
@@ -341,8 +341,8 @@
       const formatNum = (num) => parseFloat(num).toLocaleString('en-IN', {minimumFractionDigits: 2});
       
       const message = 
-`SRI VIJAYA DURGA COCONUT TRADERS
-Ph: 9848195955 | Matsyapuri
+`SRI VENKATESWARA COCONUTS
+Ph: 9989482646 | Vedangipalem
 
 Customer: ${name}
 V.NO.: ${vno} Date: ${date}
@@ -359,7 +359,7 @@ Labor Charges (11%) : ₹${formatNum(laborCharges)}
 NET PAYABLE         : ₹${formatNum(netPayable)}
 
 ✅ Payment to be made within 7 days
-Thank you! Visit Again 🌴`;
+ 🌴🌴🌴🌴🌴🌴🌴🌴🌴🌴🌴🌴🌴`;
 
       const encodedMessage = encodeURIComponent(message);
       const whatsappUrl = `https://wa.me/?text=${encodedMessage}`;
@@ -701,4 +701,5 @@ Thank you! Visit Again 🌴`;
     };
   </script>
 </body>
+
 </html>
